[package]
name = "statistical_computing"
version = "0.0.1-alpha.2"
edition = "2021"
license = "MIT"
description = "A library for statistical computing in Rust."
repository = "https://github.com/RileySeaburg/statistical_computing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
